restructured base node classes